# usd-sofr-curve

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  TEST_CASES.md  pyproject.toml
bloomberg/: BOOTSTRAP.md  Bootstrap_Check.xlsx  CDSW_MATCH.md  CDS_Pricer.xlsx  CDS_PricerSheet_v7.xlsx  Curve_Check.xlsx  KRW_IRS.md  KRW_IRS_Bootstrap.xlsx  KRW_IRS_Bootstrap_Book1.xlsx  KRW_KevinGrid.xlsx  README.md  TestingTab_v2.xlsx  TestingTab_v3.xlsx  USD_SOFR_Curve_Bloomberg.xlsx  USD_SOFR_Curve_Bloomberg_PRE_PATCH_BACKUP.xlsx  USD_SOFR_Curve_Bloomberg_Pricer.xlsx  USD_SOFR_Curve_Bloomberg_Pricer.xlsx.bak
bloomberg/patches/: README.md  add_root_methods.py  add_wp_comments.py  blank_template.py  build_cds_pricer.py  build_curve_check.py  build_hedge.py  build_hedge2.py  build_hedge_final.py  build_hedge_master.py  build_kevin_grid.py  build_krd_reformed.py  build_krd_v2.py  build_standalone_boot.py  cdsw_logic.py  deaify.py  drop_hazard_solver.py  entities_and_charts.py  fix_external_refs.py  front_page.py  link_curve_interface.py  patch_brent_compare.py  patch_d1_d3.py  (+49 more)
configs/: lehman_public_2002.yaml  sofr_futures_public.yaml  sofr_market.yaml  sofr_proxy_public.yaml
docs/: PLAN.md
examples/: build_synthetic_sofr.py  recover_synthetic.py
openusdcurve/: __init__.py  cli.py  config.py
tests/: _synthetic.py  test_bootstrap_recovery.py  test_cli.py  test_config.py  test_conventions.py  test_csv_source.py  test_interpolation.py  test_pricing_swap.py  test_quality.py  test_repricing.py  test_sofr_compounding.py  test_synthetic_source.py  test_validation_report.py
(+53 files in other folders)
