[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openusdcurve"
version = "0.1.0"
description = "Reproducible USD interest-rate curves from public data (LIBOR-2002 replication, SOFR futures, SOFR OIS)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "nl2992", email = "nl2992@columbia.edu" }]
keywords = ["quant", "yield-curve", "sofr", "libor", "bootstrap", "fixed-income"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
validate = ["QuantLib>=1.32"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
openusdcurve = "openusdcurve.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["openusdcurve"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
